# chat

./: .gitignore  chat.cabal
app/client/: Main.hs
app/server/: Main.hs
src/: ChatClient.hs  ChatServer.hs
src/Chat/: Client.hs  Server.hs
