cabal-version:      2.4
name:               chat
version:            0.1.0.0

author:             Evgeny Gazdovsky
maintainer:         gazdovsky@gmail.com

build-type:         Simple

extra-source-files: CHANGELOG.md

common common-all
    default-language: Haskell2010
    build-depends:
        base
        , mtl
        , network
        , text
        , websockets

common common-executable
    import:           common-all
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

library
    import:           common-all
    exposed-modules:  ChatClient, ChatServer      
    hs-source-dirs:   src

executable client
    import:           common-executable
    main-is:          Main.hs
    other-modules:    ChatClient
    hs-source-dirs:   app/client, src

executable server
    import:           common-executable
    main-is:          Main.hs
    other-modules:    ChatServer
    hs-source-dirs:   app/server, src
