cabal-version:      2.4
name:               chat
version:            0.1.0.0

author:             Evgeny Gazdovsky
maintainer:         gazdovsky@gmail.com

extra-source-files: CHANGELOG.md

common common-all
    default-language: Haskell2010
    build-depends:
        base ^>= 4.14.3.0
        , mtl >= 2.2.2
        , text >= 1.2.4.1
        , websockets >= 0.12.7.3

common common-executable
    import:           common-all
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

library
    import:           common-all
    exposed-modules:  ChatClient, ChatServer      
    hs-source-dirs:   src

executable client
    import:           common-executable
    main-is:          Main.hs
    other-modules:    ChatClient
    hs-source-dirs:   app/client, src

executable server
    import:           common-executable
    main-is:          Main.hs
    other-modules:    ChatServer
    hs-source-dirs:   app/server, src
