cabal-version:      2.4
name:               chat
version:            0.1.0.0

author:             Evgeny Gazdovsky
maintainer:         gazdovsky@gmail.com

extra-source-files: CHANGELOG.md

common common-all
    default-language: Haskell2010
    build-depends:
        base ^>= 4.16.4.0
        , mtl 
        , text
        , websockets

common common-executable
    import:           common-all
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

library
    import:           common-all
    exposed-modules:  Chat.Client, Chat.Server      
    hs-source-dirs:   src

executable client
    import:           common-executable
    main-is:          Main.hs
    other-modules:    Chat.Client
    hs-source-dirs:   app/client, src

executable server
    import:           common-executable
    main-is:          Main.hs
    other-modules:    Chat.Server
    hs-source-dirs:   app/server, src
